welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: ')' expected but ';' found.
fleur(Color.red; Color.yellow);
               ^FlowerPot:2: error: ';' expected but ')' found.
fleur(Color.red; Color.yellow);
                             ^